[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/perk/PerkOverlay.gd" type="Script" id=1]
[ext_resource path="res://objects/system/CustomLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/perk/PlayerPerks.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PerkOverlay" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
z_index = 100
z_as_relative = false
script = ExtResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 1 )
anims/disappear = SubResource( 2 )

[node name="Dim" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 0.752941 )
polygon = PoolVector2Array( 0, 0, 680, 0, 680, 384, 0, 384 )

[node name="Title" parent="." instance=ExtResource( 2 )]
position = Vector2( 340, 16 )
text = "perk dealing.."
fontSize = 4
alignment = 1
outline = true

[node name="PlayerPerks0" parent="." instance=ExtResource( 3 )]

[node name="PlayerPerks1" parent="." instance=ExtResource( 3 )]
position = Vector2( 170, 0 )
playerId = 1

[node name="PlayerPerks2" parent="." instance=ExtResource( 3 )]
position = Vector2( 340, 0 )
playerId = 2

[node name="PlayerPerks3" parent="." instance=ExtResource( 3 )]
position = Vector2( 510, 0 )
playerId = 3
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
